@@ -1,5 +1,7 @@
 
 5.2b1 -> 5.3a1
+    - jbj: build: use rpmsqExecve to run build scriptlets.
+    - jbj: build: tear down _pkgPool/_specPool before exiting.
     - jbj: rpmsw: add an output FILE * argument.
     - jbj: build: put a stopwatch on build scriptlets.
     - jbj: rpmio: wrap posix_fallocate(3) / fallocate(2) (for rpmdb creation).
